--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,7 @@
     <title>Koalla Holla</title>
     <script src="vendors/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="views/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -33,6 +33,8 @@
             <th>Gender</th>
             <th>Ready for Transfer</th>
             <th>Notes</th>
+            <th>Mark Ready</th>
+            <th>Remove</th>
           </tr>
         </thead>
         <tbody id="viewKoalas">
